--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,5 @@
 jogos/__pycache__/adivinhacao.cpython-310.pyc
 jogos/__pycache__/forca.cpython-310.pyc
+Básico/jogos/__pycache__/adivinhacao.cpython-310.pyc
+.gitignore
+Básico/jogos/__pycache__/forca.cpython-310.pyc
