--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,4 @@ jogos/__pycache__/forca.cpython-310.pyc
 Básico/jogos/__pycache__/adivinhacao.cpython-310.pyc
 .gitignore
 Básico/jogos/__pycache__/forca.cpython-310.pyc
+POO/__pycache__/conta.cpython-310.pyc
