--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,4 @@ Básico/jogos/__pycache__/adivinhacao.cpython-310.pyc
 .gitignore
 Básico/jogos/__pycache__/forca.cpython-310.pyc
 POO/__pycache__/conta.cpython-310.pyc
+POO_2/tempCodeRunnerFile.py
