--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,5 @@ Básico/jogos/__pycache__/adivinhacao.cpython-310.pyc
 Básico/jogos/__pycache__/forca.cpython-310.pyc
 POO/__pycache__/conta.cpython-310.pyc
 POO_2/tempCodeRunnerFile.py
+brasilidades/__pycache__/cpf.cpython-311.pyc
+brasilidades/__pycache__/cpf_cnpj.cpython-311.pyc
