--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,4 @@ POO/__pycache__/conta.cpython-310.pyc
 POO_2/tempCodeRunnerFile.py
 brasilidades/__pycache__/cpf.cpython-311.pyc
 brasilidades/__pycache__/cpf_cnpj.cpython-311.pyc
+.vscode/settings.json
