--- a/.gitignore
+++ b/.gitignore
@@ -13,4 +13,4 @@ brasilidades/__pycache__/cpf_cnpj.cpython-310.pyc
 brasilidades/__pycache__/telefones.cpython-310.pyc
 brasilidades/__pycache__/datas.cpython-310.pyc
 venv/
-C:\Users\Vinicius\Desktop\Python_Alura\brasilidades\__pycache__\acesso_cep.cpython-310.pyc
+brasilidades/__pycache__/acesso_cep.cpython-310.pyc
