--- a/.gitignore
+++ b/.gitignore
@@ -14,3 +14,6 @@ brasilidades/__pycache__/telefones.cpython-310.pyc
 brasilidades/__pycache__/datas.cpython-310.pyc
 venv/
 brasilidades/__pycache__/acesso_cep.cpython-310.pyc
+brasilidades/tempCodeRunnerFile.py
+.gitignore
+brasilidades/__pycache__/acesso_cep.cpython-310.pyc
