--- a/.gitignore
+++ b/.gitignore
@@ -17,3 +17,4 @@ brasilidades/__pycache__/acesso_cep.cpython-310.pyc
 brasilidades/tempCodeRunnerFile.py
 .gitignore
 brasilidades/__pycache__/acesso_cep.cpython-310.pyc
+brasilidades/__pycache__/acesso_cep.cpython-311.pyc
