--- a/.gitignore
+++ b/.gitignore
@@ -15,4 +15,5 @@ brasilidades/tempCodeRunnerFile.py
 brasilidades/__pycache__/acesso_cep.cpython-310.pyc
 POO_2/testes/__pycache__/bytebank.cpython-310.pyc
 requirements.txt
+.vscode/
 venv/
